--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@redwoodjs/auth-dbauth-setup": "6.0.0",
+    "@redwoodjs/cli-storybook": "6.0.0",
     "@redwoodjs/core": "6.0.0"
   },
   "eslintConfig": {
